--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -107,6 +107,8 @@ https://github.com/dece1ver/Sunduk
         Info.Add(new ChangelogInfo(new Version(1, 0, 7, 0), new DateTime(2023, 12, 28), new[] {
             "Пользовательский цикл резьбофрезерования Victor.",
             "Переходы подводов/отводов задней бабки и остановки на токарке."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 7, 1), new DateTime(2024, 1, 11), new[] {
+            "Кнопки с углами в расчете конуса сверла."}));
         Info.Reverse();
     }
 
