--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -109,6 +109,8 @@ https://github.com/dece1ver/Sunduk
             "Переходы подводов/отводов задней бабки и остановки на токарке."}));
         Info.Add(new ChangelogInfo(new Version(1, 0, 7, 1), new DateTime(2024, 1, 11), new[] {
             "Кнопки с углами в расчете конуса сверла."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 7, 2), new DateTime(2024, 1, 14), new[] {
+            "Коническая резьба по ГОСТ 6211-81", "Резьбы UTS по ANSI / ASME B1.1"}));
         Info.Reverse();
     }
 
